# UCR

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  char.txt  index.html  mkdocs.yml  new.txt  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml
coming_soon/: index.html
conf/: infer_cls.yaml  infer_det.yaml  infer_rec.yaml  infer_system.yaml
conf/architecture/: det_mv3_db.yaml  det_mv3_east.yaml  det_ppocr_mobile.yaml  det_ppocr_server.yaml  det_r50_vd_east.yaml  det_r50_vd_sast_totaltext.yaml  rec_mv3_none_bilstm_ctc.yaml  rec_mv3_none_none_ctc.yaml  rec_ppocr_mobile.yaml  rec_r34_vd_none_bilstm_ctc.yaml  rec_r34_vd_none_none_ctc.yaml  rec_r34_vd_tps_bilstm_att.yaml
conf/hydra/job_logging/: custom.yaml
conf/hydra/output/: custom.yaml
conf/postprocess/: cls.yaml  det_craft.yaml  det_east.yaml  det_sast_icdar15.yaml  det_sast_totaltext.yaml  rec_att.yaml  rec_srn.yaml
conf/preprocess/: cls.yaml  det_db.yaml  det_sast_totaltext.yaml
configs/cls/: cls_ench_ppocr_mobile.yml
configs/det/: det_ench_ppocr_mobile.yml  det_ench_ppocr_server.yml  det_mv3_db.yml  det_mv3_east.yml  det_r50_vd_db.yml  det_r50_vd_east.yml  det_r50_vd_sast_icdar15.yml  det_r50_vd_sast_totaltext.yml  det_vgg_craft.yml
configs/rec/: generate_multi_language_configs.py  rec_icdar15.yml  rec_mv3_none_bilstm_ctc.yml  rec_mv3_none_none_ctc.yml  rec_mv3_tps_bilstm_att.yml  rec_mv3_tps_bilstm_ctc.yml  rec_r34_vd_none_bilstm_ctc.yml  rec_r34_vd_none_none_ctc.yml  rec_r34_vd_tps_bilstm_att.yml  rec_r34_vd_tps_bilstm_ctc.yml  rec_r50_fpn_srn.yml
configs/rec/multi_language/: rec_ar_lite.yml  rec_be_lite.yml  rec_bg_lite.yml  rec_chinese_cht_lite.yml  rec_en_number_lite.yml  rec_ench_ppocr_mobile.yml  rec_ench_ppocr_server.yml  rec_fa_lite.yml  rec_french_lite.yml  rec_german_lite.yml  rec_hi_lite.yml  rec_it_lite.yml  rec_japan_lite.yml  rec_ka_lite.yml  rec_korean_lite.yml  rec_mr_lite.yml  rec_multi_language_lite.yml  (+12 more)
demo/: index.html
docs/: CNAME  demo.md  index.md  modelzoo.md  tldr.md
modelzoo/: index.html
output/tsv/: ocr_c.tsv  ocr_e.tsv  ocr_h.tsv  ocr_j.tsv  ocr_l.tsv  ocr_r.tsv
search/: search_index.json
static/css/: custom.css
tldr/: index.html
ucr/: __init__.py  infer.py  ucr.py
ucr/Index/: index.html
ucr/conf/: infer_cls.yaml  infer_det.yaml  infer_rec.yaml  infer_system.yaml
ucr/core/: __init__.py
ucr/inference/: infer_cls.py  infer_det.py  infer_rec.py  infer_system.py
ucr/train/: index.html
ucr/ucr/: index.html
ucr/utils/: annotation.py  logging.py  utility.py
(+108 files in other folders)
