[tool.poetry]
name = "ucr"
version = "0.1.13" # This will be overriden by the CI at publish time
description = "Universal Character Recognizer (UCR): Simple, Intuitive, Extensible, Multi-Lingual OCR engine"
authors = ["Abhigyan Raman <abhigyan@docyard.ai>"]
packages = [
    {include = "ucr"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"
wandb = "^0.8.18"
tqdm = "^4.40"
numpy = "<1.20.0"
opencv-python = "^4.1.0"
imgaug = "^0.4.0"
torchvision = "^0.9.0"
hydra-core = "^1.0.6"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
flake8 = "^3.7"
rope = "^0.14.0"
pre-commit = "^1.21.0"
black = "^19.10b0"
jupyterlab = "^1.2.6"
pyvista = "^0.23.1"
panel = "^0.8.0"
param = "^1.9.3"
codecov = "^2.0.16"
gpustat = "^0.6.0"
snakeviz = "^2.0.1"
sphinx_rtd_theme = "^0.4.3"
sphinx = "^2.4.4"
sphinx-autobuild = "^0.7.1"
mypy = "^0.770"
ipywidgets = "^7.5.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
