[tool.poetry]
name = "ucr"
version = "0.2.13"
description = "Universal Character Recognizer (UCR): Simple, Intuitive, Extensible, Multi-Lingual OCR engine"
authors = ["Abhigyan Raman <abhigyan@docyard.ai>"]
packages = [
    {include = "ucr"}
]
readme = "README.md"
documentation = "https://github.com/DocYard-ai/UCR"

[tool.poetry.scripts]
ucr = 'ucr.ucr:main'

[tool.poetry.dependencies]
python = "^3.6.2"
tqdm = "^4.40"
numpy = "<1.20.0"
opencv-python = "^4.1.0"
imgaug = "^0.4.0"
hydra-core = "^1.0.6"
pyclipper = "^1.2.1"
tabulate = "^0.8.9"
pandas = "~1.1"
PyMuPDF = "^1.18.10"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
flake8 = "^3.7"
pre-commit = "^1.21.0"
isort = "^5.0"
black = "^19.10b0"
jupyterlab = "^1.2.6"
codecov = "^2.0.16"
snakeviz = "^2.0.1"
mypy = "^0.770"
gpustat = "^0.6.0"
mkdocs = "^1.1.0"
mkdocs-macros-plugin = "^0.5.0"
mkdocs-material = "^6.2.0"
mkdocstrings = "^0.14.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

# black formatting
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

#isort configs
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
